# fx-strategy-framework

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
docs/: architecture-review.md  basket-sleeve.md  ibkr-alternative-strategies-findings.md  income-enhancements.md  intraday-fx-assessment-plan.md  scheduled-paper-track.md  strategy-research-backlog.md
forex/: __main__.py  cli.py  config.py
planning/: basket-sleeve-plan.md  final-fixes-report.md  task-1-report.md  task-2-report.md  task-3-report.md
scripts/: basket_rebalance.py  basket_rebalance.sh  bond_ladder.py  cash_sleeve.py  income_sleeve.py  install_schedules.sh  monthly_paper_rebalance.sh  quarterly_basket_rebalance.sh  refresh_track_data.py  snapshot_nav.py  track_report.py
strategies/: blend.py  carry.py  carrymom.py  mloverlay.py  momentum.py  overlay.py  positioning.py  trend.py  value.py
tests/: test_backtest_driver.py  test_basket_execution.py  test_basket_track.py  test_basket_weights.py  test_blend.py  test_carry.py  test_carry_baseline.py  test_carry_strategy.py  test_carrymom_strategy.py  test_causal.py  test_cftc.py  test_cli_download.py  test_cli_dryrun.py  test_cli_hyperopt.py  test_cli_resolve.py  test_cli_run.py  test_compose.py  test_config.py  test_dataview.py  test_discovery.py  test_envconfig.py  test_execution.py  test_fred.py  test_gbmvol.py  test_hyperopt.py  test_ibconnect.py  test_ibkr_data.py  test_live_execution.py  test_live_runner.py  test_mloverlay.py  test_mlvol.py  test_momentum.py  test_momentum_strategy.py  test_overlay.py  test_overlay_strategy.py  (+20 more)
(+95 files in other folders)
