[project]
name = "forex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "numpy>=1.26", "pyarrow>=14", "fredapi>=0.5"]

[project.scripts]
forex = "forex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
