[project]
name = "forex"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["pandas>=2.0", "numpy>=1.26", "pyarrow>=14", "fredapi>=0.5"]

[project.scripts]
forex = "forex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
probe = ["scikit-learn>=1.4"]
live = ["ib_async>=2.0"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forex*", "strategies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
